src/objects/QPMS__Variable_Data__c.object
<CustomObject>
    <description>Variable Data</description>
    <fields>
        <fullName>QPMS__After_Calibration_Measurement__c</fullName>
        <description>After Calibration Measurement</description>
        <inlineHelpText>After Calibration Measurement</inlineHelpText>
        <label>After Calibration Measurement</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__AsRecvMsmt__c</fullName>
        <formula>TEXT( QPMS__As_Received_Measurement__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AsRecvMsmt</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__As_Received_Measurement__c</fullName>
        <description>As Received Measurement</description>
        <inlineHelpText>As Received Measurement</inlineHelpText>
        <label>As Received Measurement</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Calibration_Criteria__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Calibration Criteria</description>
        <inlineHelpText>Calibration Criteria</inlineHelpText>
        <label>Calibration Criteria</label>
        <referenceTo>QPMS__Calibration_Criteria__c</referenceTo>
        <relationshipLabel>Variable Datas</relationshipLabel>
        <relationshipName>Variable_Datas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Calibration__c</fullName>
        <formula>QPMS__Calibration_Criteria__r.QPMS__Calibration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calibration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Criteria_Name__c</fullName>
        <formula>QPMS__Calibration_Criteria__r.QPMS__Criteria_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Criteria Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Criteria__c</fullName>
        <formula>QPMS__Calibration_Criteria__r.QPMS__Criteria__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Criteria</label>
        <type>Text</type>
    </fields>
    <label>Variable Data</label>
    <nameField>
        <displayFormat>VD-{0000}</displayFormat>
        <label>Variable Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Variable Datas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>